add save file to minio
