# api/swagger/swagger.json
@@ -88,6 +88,71 @@
                 }
             }
         },
+        "/secret/file": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Загружает файл как секрет пользователя",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "secrets"
+                ],
+                "summary": "Загрузка файлового секрета",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Файл для загрузки",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "TEXT",
+                            "CARD",
+                            "FILE",
+                            "CREDENTIALS"
+                        ],
+                        "type": "string",
+                        "default": "FILE",
+                        "description": "Тип секрета",
+                        "name": "data_type",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "{\"login\":\"user\",\"password\":\"pass\"}",
+                        "description": "Данные секрета в JSON формате",
+                        "name": "data",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Успешная загрузка файла"
+                    },
+                    "400": {
+                        "description": "Неверный запрос"
+                    },
+                    "401": {
+                        "description": "Пользователь не авторизован"
+                    },
+                    "413": {
+                        "description": "Файл слишком большой"
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера"
+                    }
+                }
+            }
+        },
         "/secret/list": {
             "get": {
                 "security": [
